--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,15 @@
 {
-    "buildCommand": "bun run vercel-build",
-    "framework": null,
-    "outputDirectory": "public",
-    "rewrites": [
-        { "source": "/assets/(.*)", "destination": "/assets/$1" },
-        { "source": "/(.*)", "destination": "/index.html" }
-    ],
-    "headers": [
+    "framework": "vite",
+    "outputDirectory": "dist",
+    "routes": [
         {
-            "source": "/assets/(.*)",
-            "headers": [
-                {
-                    "key": "Cache-Control",
-                    "value": "public, max-age=31536000, immutable"
-                }
-            ]
+            "src": "/assets/(.*)",
+            "headers": { "cache-control": "public, max-age=31536000, immutable" },
+            "dest": "/assets/$1"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/index.html"
         }
     ]
 }
