--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-shadcn-uiblocks",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "description": "React Shadcn UI Blocks Starter",
     "author": "AlexY-OS",
     "license": "MIT",
@@ -16,11 +16,15 @@
         "@radix-ui/react-navigation-menu": "^1.2.1",
         "@radix-ui/react-slot": "^1.1.0",
         "@types/node": "22.10.1",
+        "@types/prismjs": "1.26.5",
         "@types/react-dom": "19.0.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-react": "^0.468.0",
+        "prismjs": "1.29.0",
+        "react-resizable-panels": "2.1.7",
         "react-router-dom": "7.0.2",
+        "sonner": "1.7.1",
         "tailwind-merge": "^2.5.5"
     },
     "devDependencies": {
