--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "preview": "bunx --bun vite preview"
     },
     "dependencies": {
+        "@jridgewell/gen-mapping": "^0.3.7",
         "@radix-ui/react-dialog": "^1.1.2",
         "@radix-ui/react-label": "2.1.0",
         "@radix-ui/react-navigation-menu": "^1.2.1",
@@ -25,15 +26,16 @@
         "react-resizable-panels": "2.1.7",
         "react-router-dom": "7.0.2",
         "sonner": "1.7.1",
+        "sucrase": "^3.35.0",
         "tailwind-merge": "^2.5.5"
     },
     "devDependencies": {
         "@types/react": "^19.0.1",
-        "@vitejs/plugin-react-swc": "^3.6.0",
+        "@vitejs/plugin-react": "4.3.4",
         "autoprefixer": "10.4.20",
-        "postcss": "8.4.49",
+        "postcss": "^8.4.49",
         "tailwindcss": "3.4.16",
-        "typescript": "^5.4.0",
-        "vite": "^5.1.0"
+        "typescript": "^5.7.2",
+        "vite": "^5.4.11"
     }
 }
