--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@radix-ui/react-dialog": "^1.1.2",
         "@radix-ui/react-label": "2.1.0",
         "@radix-ui/react-navigation-menu": "^1.2.1",
+        "@radix-ui/react-select": "^2.1.2",
         "@radix-ui/react-slot": "^1.1.0",
         "@types/node": "22.10.1",
         "@types/prismjs": "1.26.5",
@@ -27,7 +28,8 @@
         "react-router-dom": "7.0.2",
         "sonner": "1.7.1",
         "sucrase": "^3.35.0",
-        "tailwind-merge": "^2.5.5"
+        "tailwind-merge": "^2.5.5",
+        "zustand": "^5.0.2"
     },
     "devDependencies": {
         "@types/react": "^19.0.1",
