--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "lucide-react": "^0.468.0",
         "react-resizable-panels": "2.1.7",
         "react-router-dom": "7.0.2",
+        "sonner": "^1.7.1",
         "tailwind-merge": "^2.5.5",
         "zustand": "^5.0.2"
     },
