--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-shadcn-uiblocks",
-    "version": "1.0.4",
+    "version": "1.0.5",
     "description": "React Shadcn UI Blocks Starter",
     "author": "AlexY-OS",
     "license": "MIT",
@@ -8,7 +8,8 @@
     "scripts": {
         "dev": "bunx --bun vite",
         "build": "bunx --bun vite build",
-        "preview": "bunx --bun vite preview"
+        "preview": "bunx --bun vite preview",
+        "declary": "bun run declary/watchStyles.ts"
     },
     "dependencies": {
         "@radix-ui/react-dialog": "^1.1.2",
@@ -16,11 +17,11 @@
         "@radix-ui/react-navigation-menu": "^1.2.1",
         "@radix-ui/react-select": "^2.1.2",
         "@radix-ui/react-slot": "^1.1.0",
+        "@types/bun": "^1.1.14",
         "@types/react-dom": "19.0.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-react": "^0.468.0",
-        "react-resizable-panels": "2.1.7",
         "react-router-dom": "7.0.2",
         "sonner": "^1.7.1",
         "tailwind-merge": "^2.5.5",
