--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-shadcn-uiblocks",
-    "version": "1.0.5",
+    "version": "1.0.6",
     "description": "React Shadcn UI Blocks Starter",
     "author": "AlexY-OS",
     "license": "MIT",
@@ -18,9 +18,11 @@
         "@radix-ui/react-select": "^2.1.2",
         "@radix-ui/react-slot": "^1.1.0",
         "@types/bun": "^1.1.14",
+        "@types/js-beautify": "^1.14.3",
         "@types/react-dom": "19.0.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "js-beautify": "^1.15.1",
         "lucide-react": "^0.468.0",
         "react-router-dom": "7.0.2",
         "sonner": "^1.7.1",
