--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "license": "MIT",
     "type": "module",
     "scripts": {
-        "dev": "bunx --bun vite",
-        "build": "bunx --bun vite build",
-        "preview": "bunx --bun vite preview",
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview",
         "declary": "bun run declary/watchStyles.ts"
     },
     "dependencies": {
