--- a/package.json
+++ b/package.json
@@ -12,16 +12,22 @@
         "declary": "bun run declary/watchStyles.ts"
     },
     "dependencies": {
+        "@radix-ui/react-accordion": "^1.2.2",
+        "@radix-ui/react-avatar": "^1.1.2",
         "@radix-ui/react-dialog": "^1.1.2",
         "@radix-ui/react-label": "2.1.0",
         "@radix-ui/react-navigation-menu": "^1.2.1",
         "@radix-ui/react-select": "^2.1.2",
+        "@radix-ui/react-separator": "^1.1.1",
         "@radix-ui/react-slot": "^1.1.0",
+        "@radix-ui/react-switch": "^1.1.2",
+        "@radix-ui/react-tooltip": "^1.1.5",
         "@types/bun": "^1.1.14",
         "@types/js-beautify": "^1.14.3",
         "@types/react-dom": "19.0.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "embla-carousel-react": "^8.5.1",
         "js-beautify": "^1.15.1",
         "lucide-react": "^0.468.0",
         "react-router-dom": "7.0.2",
