--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
         "@radix-ui/react-switch": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.5",
         "@types/bun": "^1.1.14",
+        "@types/canvas-confetti": "^1.6.4",
         "@types/js-beautify": "^1.14.3",
         "@types/react-dom": "19.0.1",
+        "canvas-confetti": "^1.9.3",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "embla-carousel-react": "^8.5.1",
         "js-beautify": "^1.15.1",
+        "lottie-react": "^2.4.0",
         "lucide-react": "^0.468.0",
         "react-router-dom": "7.0.2",
         "sonner": "^1.7.1",
