--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "react-shadcn-uiblocks-pro",
+    "name": "buildy-pro",
     "version": "1.0.8",
     "description": "React Shadcn UI Blocks Starter",
     "author": "AlexY-OS",
