--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "dev": "vite",
         "build": "vite build",
         "preview": "vite preview",
-        "declary": "bun run declary/watchStyles.ts"
+        "sync-lite": "bun .scripts/copyToLiteBlocks.ts"
     },
     "dependencies": {
         "@radix-ui/react-accordion": "^1.2.2",
